--- a/modules/end-user-guide/pages/starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc
+++ b/modules/end-user-guide/pages/starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc
@@ -93,7 +93,7 @@ pass:c,a,q[{prod-url}]#__https://__<token>__@__<host>__/__<path> <1>
 ----
 <1> See xref:using-a-git-provider-access-token.adoc[].
 
-This would work for GitHub, GitLab, Bitbucket, Microsoft Azure, and other providers that support Personal Access Token.
+This works for GitHub, GitLab, Bitbucket, Microsoft Azure, and other providers that support Personal Access Token.
 ====
 +
 .A URL for starting a new workspace from devfile location
