--- a/modules/end-user-guide/pages/starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc
+++ b/modules/end-user-guide/pages/starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc
@@ -35,7 +35,7 @@ To start a new workspace with a clone of a Git repository:
 . Optional: Visit your {prod-short} dashboard pages to authenticate to your organization's instance of {prod-short}.
 
 . Visit the URL to start a new workspace using the basic syntax:
-.. Using a Git repository URL:
+.. Use a Git repository URL:
 [source,subs="+quotes,+attributes,+macros"]
 +
 ----
