--- a/modules/end-user-guide/pages/starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc
+++ b/modules/end-user-guide/pages/starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc
@@ -77,7 +77,7 @@ A clone of the Git repository is present in the filesystem of the new workspace.
 +
 The workspace has a unique URL: `pass:c,a,q[{prod-url}]#workspace__<unique_url>__`.
 
-.. Using a direct URL to `devfile`:
+.. Use a direct URL to `devfile`:
 [source,subs="+quotes,+attributes,+macros"]
 +
 ----
