review of PR 2560

--- a/modules/administration-guide/pages/configuring-oauth-2-for-microsoft-azure-devops-services.adoc
+++ b/modules/administration-guide/pages/configuring-oauth-2-for-microsoft-azure-devops-services.adoc
@@ -8,7 +8,7 @@
 = Configuring OAuth 2.0 for Microsoft Azure DevOps Services
 
 pass:[<!-- vale RedHat.Spelling = NO -->]
-To enable users to work with a remote Git repository that is hosted on Microsoft Azure Repos:
+To enable users to work with a remote Git repository that is hosted on link:https://azure.microsoft.com/en-us/products/devops/repos/[Microsoft Azure Repos]:
 pass:[<!-- vale RedHat.Spelling = YES -->]
 
 . Set up the Microsoft Azure DevOps Services OAuth App (OAuth 2.0).
