--- a/modules/end-user-guide/pages/authenticating-to-a-git-server-from-a-workspace.adoc
+++ b/modules/end-user-guide/pages/authenticating-to-a-git-server-from-a-workspace.adoc
@@ -11,10 +11,10 @@ In a workspace, you can run Git commands that require user authentication like c
 
 User authentication to a Git server from a workspace is configured by the administrator or, in some cases, by the individual user:
 
-* Your administrator sets up an xref:administration-guide:oauth-for-github-gitlab-or-bitbucket.adoc[OAuth application on GitHub, GitLab, or Bitbucket] for your organization's {prod} instance.
+* Your administrator sets up an xref:administration-guide:configuring-oauth-for-git-providers.adoc[OAuth application on GitHub, GitLab, Bitbucket, or Microsoft Azure Repos] for your organization's {prod} instance.
 
 * As a workaround, some users create and apply their own {kubernetes} Secrets for their personal xref:using-a-git-provider-access-token.adoc[Git-provider access tokens].
 
 .Additional resources
-* xref:administration-guide:oauth-for-github-gitlab-or-bitbucket.adoc[Administration Guide: OAuth for GitHub, GitLab, or Bitbucket]
+* xref:administration-guide:configuring-oauth-for-git-providers.adoc[Administration Guide: Configuring OAuth for Git providers]
 * xref:using-a-git-provider-access-token.adoc[User Guide: Using a Git-provider access token]
