--- a/modules/administration-guide/partials/proc_applying-the-microsoft-azure-devops-services-oauth-app-secret.adoc
+++ b/modules/administration-guide/partials/proc_applying-the-microsoft-azure-devops-services-oauth-app-secret.adoc
@@ -14,7 +14,7 @@ Prepare and apply the Microsoft Azure DevOps Services Secret.
 * Setting up the Microsoft Azure DevOps Services OAuth App is completed.
 
 * The Base64-encoded values, which were generated when setting up the Microsoft Azure DevOps Services OAuth App, are prepared:
-** *Application ID*
+** *App ID*
 ** *Client Secret*
 
 * An active `{orch-cli}` session with administrative permissions to the destination {orch-name} cluster. See {orch-cli-link}.
@@ -37,12 +37,12 @@ metadata:
     che.eclipse.org/oauth-scm-server: azure-devops
 type: Opaque
 data:
-  id: __<Base64_Microsoft_Azure_DevOps_Services_OAuth_Application_ID>__ <2>
+  id: __<Base64_Microsoft_Azure_DevOps_Services_OAuth_App_ID>__ <2>
   secret: __<Base64_Microsoft_Azure_DevOps_Services_OAuth_Client_Secret>__ <3>
 ----
 <1> The {prod-short} namespace. The default is `{prod-namespace}`.
-<4> The Base64-encoded *Microsoft Azure DevOps Services OAuth Application ID*.
-<5> The Base64-encoded *Microsoft Azure DevOps Services OAuth Client Secret*.
+<4> The Base64-encoded Microsoft Azure DevOps Services OAuth *App ID*.
+<5> The Base64-encoded Microsoft Azure DevOps Services OAuth *Client Secret*.
 
 . Apply the Secret:
 +
