remove 'cloud' from IDE

--- a/modules/end-user-guide/pages/customizing-workspace-components.adoc
+++ b/modules/end-user-guide/pages/customizing-workspace-components.adoc
@@ -14,6 +14,6 @@ To customize workspace components:
 
 * xref:devfile-introduction.adoc[Use a devfile].
 
-* xref:cloud-ides-in-workspaces.adoc[Configure a cloud IDE].
+* xref:ides-in-workspaces.adoc[Configure an IDE].
 
 * Add {prod-short} specific attributes in addition to the generic devfile specification.
