--- a/modules/end-user-guide/pages/defining-a-common-ide.adoc
+++ b/modules/end-user-guide/pages/defining-a-common-ide.adoc
@@ -7,7 +7,7 @@
 [id="defining-a-common-ide"]
 = Defining a common IDE
 
-While the xref:url-parameter-for-the-cloud-ide.adoc[URL parameter for the cloud IDE] enables you to start a workspace with your personal choice of the supported IDE, you might find it more convenient to define the same cloud IDE, even with a more detailed IDE configuration, for all workspaces that will clone the same remote Git repository with your project source code. To do so, use the `che-editor.yaml` file.
+While the xref:url-parameter-for-the-ide.adoc[URL parameter for the IDE] enables you to start a workspace with your personal choice of the supported IDE, you might find it more convenient to define the same IDE, even with a more detailed IDE configuration, for all workspaces that will clone the same remote Git repository with your project source code. To do so, use the `che-editor.yaml` file.
 
 include::partial$proc_setting-up-che-editor-yaml.adoc[leveloffset=+1]
 
