--- a/modules/end-user-guide/pages/ides-in-workspaces.adoc
+++ b/modules/end-user-guide/pages/ides-in-workspaces.adoc
@@ -1,21 +1,21 @@
 :_content-type: PROCEDURE
-:description: Cloud IDEs in workspaces
+:description: IDEs in workspaces
 :keywords: configuring, workspace, editor, ide, cloud ide
-:navtitle: Cloud IDEs in workspaces
+:navtitle: IDEs in workspaces
 :page-aliases:
 
-[id="cloud-ides-in-workspaces"]
-= Cloud IDEs in workspaces
+[id="ides-in-workspaces"]
+= IDEs in workspaces
 
-== Supported cloud IDEs
+== Supported IDEs
 
-The default cloud IDE in a new workspace is Microsoft Visual Studio Code - Open Source. Alternatively, you can choose another supported IDE:
+The default IDE in a new workspace is Microsoft Visual Studio Code - Open Source. Alternatively, you can choose another supported IDE:
 
-.Supported cloud IDEs 
+.Supported IDEs 
 
 [cols="1,1a,1a"]
 |===
-| Cloud IDE | `id` | Note
+| IDE | `id` | Note
 
 include::example$snip_{project-context}-table-of-supported-editors.adoc[]
 
