--- a/modules/end-user-guide/partials/proc_adding-vs-code-extensions.adoc
+++ b/modules/end-user-guide/partials/proc_adding-vs-code-extensions.adoc
@@ -2,7 +2,7 @@
 [id="adding-vs-code-extensions"]
 = Adding `VS Code` extensions
 
-To have the Microsoft Visual Studio Code - Open Source cloud IDE automatically install chosen extensions, you have to add an `extensions.json` file to the remote Git repository that contains your project source code and that will be cloned into workspaces.
+To have the Microsoft Visual Studio Code - Open Source IDE automatically install chosen extensions, you have to add an `extensions.json` file to the remote Git repository that contains your project source code and that will be cloned into workspaces.
 
 .Prerequisites
 * {prod-short} has network access to the link:https://www.open-vsx.org/[OpenVSX registry].
