--- a/modules/end-user-guide/partials/proc_setting-up-che-editor-yaml.adoc
+++ b/modules/end-user-guide/partials/proc_setting-up-che-editor-yaml.adoc
@@ -1,7 +1,7 @@
 [id="setting-up-che-editor-yaml"]
 = Setting up che-editor.yaml
 
-By using the `che-editor.yaml` file, you can set a common default IDE for your team and provide new contributors with the most suitable IDE for your project source code. You can also use the `che-editor.yaml` file when you need to set a different cloud IDE default for a particular project repository rather than the default cloud IDE of your organization's {prod-short} instance.
+By using the `che-editor.yaml` file, you can set a common default IDE for your team and provide new contributors with the most suitable IDE for your project source code. You can also use the `che-editor.yaml` file when you need to set a different IDE default for a particular project repository rather than the default IDE of your organization's {prod-short} instance.
 
 .Procedure
 
