--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -9,7 +9,7 @@
 ** xref:starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc[]
 ** xref:optional-parameters-for-the-urls-for-starting-a-new-workspace.adoc[]
 *** xref:url-parameter-concatenation.adoc[]
-*** xref:url-parameter-for-the-cloud-ide.adoc[]
+*** xref:url-parameter-for-the-ide.adoc[]
 *** xref:url-parameter-for-starting-duplicate-workspaces.adoc[]
 *** xref:url-parameter-for-the-devfile-file-name.adoc[]
 *** xref:url-parameter-for-the-devfile-file-path.adoc[]
@@ -19,7 +19,7 @@
 ** xref:authenticating-to-a-git-server-from-a-workspace.adoc[]
 * xref:customizing-workspace-components.adoc[]
 * xref:devfile-introduction.adoc[]
-* xref:cloud-ides-in-workspaces.adoc[]
+* xref:ides-in-workspaces.adoc[]
 ** xref:defining-a-common-ide.adoc[]
 ** xref:microsoft-visual-studio-code-open-source-ide.adoc[]
 * xref:using-credentials-and-configurations-in-workspaces.adoc[]
