--- a/modules/end-user-guide/pages/url-parameter-for-the-ide.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-the-ide.adoc
@@ -1,15 +1,15 @@
 :_content-type: CONCEPT
-:description: URL parameter for the cloud IDE
+:description: URL parameter for the IDE
 :keywords: ide, editor, workspace-ide, workspace-editor
-:navtitle: URL parameter for the cloud IDE
+:navtitle: URL parameter for the IDE
 :page-aliases: url-parameter-for-the-in-browser-ide.adoc
 
-[id="url-parameter-for-the-cloud-ide"]
-= URL parameter for the cloud IDE
+[id="url-parameter-for-the-ide"]
+= URL parameter for the IDE
 
-If the URL for starting a new workspace doesn't contain a parameter specifying the integrated development environment (IDE), the workspace loads with the default cloud IDE, which is Microsoft Visual Studio Code - Open Source.
+If the URL for starting a new workspace doesn't contain a parameter specifying the integrated development environment (IDE), the workspace loads with the default IDE, which is Microsoft Visual Studio Code - Open Source.
 
-The URL parameter for specifying a supported cloud IDE is `che-editor=`. You can use it to start a workspace with a clone of the same project repository and your choice of a supported cloud IDE.
+The URL parameter for specifying a supported IDE is `che-editor=`. You can use it to start a workspace with a clone of the same project repository and your choice of a supported IDE.
 
 TIP: You can use the `che-editor=` parameter when you cannot add or edit a xref:defining-a-common-ide.adoc[`/.che/che-editor.yaml`] file in the source-code Git repository to be cloned for workspaces.
 
@@ -25,10 +25,10 @@ pass:c,a,q[{prod-url}]#__<git_repository_url>__?che-editor=__<editor_key>__
 ----
 +
 
-.The URL parameter `__<editor_key>__` values for supported cloud IDEs
+.The URL parameter `__<editor_key>__` values for supported IDEs
 [cols="1,1a,1a"]
 |===
-| Cloud IDE | `__<editor_key>__` value | Note
+| IDE | `__<editor_key>__` value | Note
 
 include::example$snip_{project-context}-table-of-supported-editors.adoc[]
 
