--- a/modules/end-user-guide/partials/ref_parameters-for-che-editor-yaml.adoc
+++ b/modules/end-user-guide/partials/ref_parameters-for-che-editor-yaml.adoc
@@ -1,9 +1,9 @@
 [id="parameters-for-che-editor-yaml"]
 = Parameters for che-editor.yaml
 
-The simplest way to select a cloud IDE in the `che-editor.yaml` is to specify the `id` of an IDE from the table of supported cloud IDEs:
+The simplest way to select an IDE in the `che-editor.yaml` is to specify the `id` of an IDE from the table of supported IDEs:
 
-.Supported cloud IDEs
+.Supported IDEs
 [cols="1,1a,1a"]
 |===
 | IDE | `id` | Note
@@ -13,7 +13,7 @@ include::example$snip_{project-context}-table-of-supported-editors.adoc[]
 |===
 
 
-.`id` selects a cloud IDE from the plugin registry
+.`id` selects an IDE from the plugin registry
 ====
 [source,yaml]
 ----
@@ -21,7 +21,7 @@ id: che-incubator/che-idea/latest
 ----
 ====
 
-As alternatives to providing the `id` parameter, the `che-editor.yaml` file supports a `reference` to the URL of another `che-editor.yaml` file or an `inline` definition for a cloud IDE outside of a plugin registry:
+As alternatives to providing the `id` parameter, the `che-editor.yaml` file supports a `reference` to the URL of another `che-editor.yaml` file or an `inline` definition for an IDE outside of a plugin registry:
 
 .`reference` points to a remote `che-editor.yaml` file
 ====
@@ -31,7 +31,7 @@ reference: https://__<hostname_and_path_to_a_remote_file>__/che-editor.yaml
 ----
 ====
 
-.`inline` specifies a complete definition for a customized cloud IDE without a plugin registry
+.`inline` specifies a complete definition for a customized IDE without a plugin registry
 ====
 [source,yaml]
 ----
@@ -81,7 +81,7 @@ registryUrl: __<url_of_custom_plugin_registry>__
 <1> The `id` of the IDE in the custom plugin registry.
 ====
 
-.`override` of the default value of one or more defined properties of the cloud IDE
+.`override` of the default value of one or more defined properties of the IDE
 ====
 [source,yaml,subs="+quotes"]
 ----
