--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -7,6 +7,7 @@
 ** xref:benefits-of-pull-requests-review-in-che.adoc[]
 * xref:user-onboarding.adoc[]
 ** xref:starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc[]
+** xref:starting-a-new-workspace-from-a-devfile-url.adoc[]
 ** xref:optional-parameters-for-the-urls-for-starting-a-new-workspace.adoc[]
 *** xref:url-parameter-concatenation.adoc[]
 *** xref:url-parameter-for-the-workspace-ide.adoc[]
