--- a/modules/end-user-guide/pages/starting-a-new-workspace-from-a-devfile-url.adoc
+++ b/modules/end-user-guide/pages/starting-a-new-workspace-from-a-devfile-url.adoc
@@ -16,7 +16,11 @@ Working with {prod-short} in your browser involves multiple URLs:
 
 With {prod-short}, you can visit a *devfile* URL in your browser to start a new workspace.
 
-TIP: You can also use the *Git Repo URL ** field on the *Create Workspace* page of your {prod-short} dashboard to enter the URL of a *devfile* to start a new workspace.
+pass:[<!-- vale RedHat.Spelling = NO -->]
+
+TIP: You can also use the *Git Repo URL** field on the *Create Workspace* page of your {prod-short} dashboard to enter the URL of a *devfile* to start a new workspace.
+
+pass:[<!-- vale RedHat.Spelling = YES -->]
 
 .Prerequisites
 
