--- a/modules/end-user-guide/pages/defining-a-common-ide.adoc
+++ b/modules/end-user-guide/pages/defining-a-common-ide.adoc
@@ -9,6 +9,8 @@
 
 While the xref:url-parameter-for-the-ide.adoc[URL parameter for the IDE] enables you to start a workspace with your personal choice of the supported IDE, you might find it more convenient to define the same IDE, even with a more detailed IDE configuration, for all workspaces that will clone the same remote Git repository with your project source code. To do so, use the `che-editor.yaml` file.
 
+TIP: If you intend to start most or all of your organization's workspaces with the same IDE other than Microsoft Visual Studio Code - Open Source, an alternative is for the administrator of your organization's {prod-short} instance to specify another supported IDE as the default IDE at the {prod-short} instance level. This can be done with `.spec.devEnvironments.defaultEditor` in the `CheCluster` Custom Resource.
+
 include::partial$proc_setting-up-che-editor-yaml.adoc[leveloffset=+1]
 
 include::partial$ref_parameters-for-che-editor-yaml.adoc[leveloffset=+1]
