--- a/modules/end-user-guide/pages/url-parameter-for-the-ide.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-the-ide.adoc
@@ -40,6 +40,13 @@ include::example$snip_{project-context}-table-of-supported-editors.adoc[]
 ----
 pass:c,a,q[{prod-url}]#__<git_repository_url>__?che-editor=__<url_to_a_file>__# <1>
 ----
-<1> You can supply a URL to a xref:defining-a-common-ide.adoc[`che-editor.yaml`]  file or another file with link:https://devfile.io/docs/2.2.0/what-is-a-devfile[devfile content].
+<1> URL to a file with link:https://devfile.io/docs/2.2.0/what-is-a-devfile[devfile content].
 +
-TIP: The URL must point to the raw file content.
+[TIP]
+====
+
+* The URL must point to the raw file content.
+
+* To use this parameter with a xref:defining-a-common-ide.adoc[`che-editor.yaml`] file, copy the file with another name or path, and remove the line with `inline` from the file.
+
+====
