--- a/modules/end-user-guide/pages/starting-a-new-workspace-from-a-devfile-url.adoc
+++ b/modules/end-user-guide/pages/starting-a-new-workspace-from-a-devfile-url.adoc
@@ -64,7 +64,7 @@ You can pass Personal Access Token to the URL to have access to private reposito
 ----
 pass:c,a,q[{prod-url}]#__https://__<token>__@__<host>__/__<path> <1>
 ----
-<1> See xref:using-a-git-provider-access-token.adoc[].
+<1> Your Personal Access Token that you generated on the Git provider's website.
 
 This works for GitHub, GitLab, Bitbucket, Microsoft Azure, and other providers that support Personal Access Token.
 ====
