--- a/modules/end-user-guide/pages/starting-a-new-workspace-from-a-devfile-url.adoc
+++ b/modules/end-user-guide/pages/starting-a-new-workspace-from-a-devfile-url.adoc
@@ -59,7 +59,7 @@ pass:c,a,q[{prod-url}]#__<devfile_url>__?__<optional_parameters>__ <1>
 +
 [TIP]
 ====
-You can pass Personal Access Token to the URL to have access to private repositories:
+You can pass your Personal Access Token to the URL to have access to private repositories:
 [source,subs="+quotes,+attributes,+macros"]
 ----
 pass:c,a,q[{prod-url}]#__https://__<token>__@__<host>__/__<path> <1>
