--- a/modules/end-user-guide/pages/starting-a-new-workspace-from-a-devfile-url.adoc
+++ b/modules/end-user-guide/pages/starting-a-new-workspace-from-a-devfile-url.adoc
@@ -14,7 +14,7 @@ Working with {prod-short} in your browser involves multiple URLs:
 * [.underline]#The URLs for starting a new workspace#
 * The URLs of your workspaces in use
 
-With {prod-short}, you can visit a *devfile* URL in your browser to start a new workspace.
+With {prod-short}, you can open a *devfile* URL in your browser to start a new workspace.
 
 pass:[<!-- vale RedHat.Spelling = NO -->]
 
