--- a/modules/end-user-guide/pages/starting-a-new-workspace-from-a-devfile-url.adoc
+++ b/modules/end-user-guide/pages/starting-a-new-workspace-from-a-devfile-url.adoc
@@ -69,10 +69,10 @@ pass:c,a,q[{prod-url}]#__https://__<token>__@__<host>__/__<path> <1>
 This works for GitHub, GitLab, Bitbucket, Microsoft Azure, and other providers that support Personal Access Token.
 ====
 +
-After you enter the URL to start a new workspace in a browser tab, it renders the workspace-starting page.
-+
-When the new workspace is ready, the workspace IDE loads in the browser tab.
-+
+.Verification
+
+After you enter the URL to start a new workspace in a browser tab, it renders the workspace-starting page. When the new workspace is ready, the workspace IDE loads in the browser tab. 
+
 The workspace has a unique URL: `pass:c,a,q[{prod-url}]#workspace__<unique_url>__`.
 
 [TIP]
