--- a/modules/end-user-guide/pages/starting-a-new-workspace-from-a-devfile-url.adoc
+++ b/modules/end-user-guide/pages/starting-a-new-workspace-from-a-devfile-url.adoc
@@ -85,7 +85,7 @@ Although this is not possible in the address bar, you can add a URL for starting
 ====
 [IMPORTANT]
 ====
-The devfile must contain a project info in its content, to initiate a clone of the Git repository in the filesystem of the new workspace.
+To initiate a clone of the Git repository in the filesystem of the new workspace, the devfile must contain project info.
 
 See https://devfile.io/docs/2.2.0/adding-projects.
 ====
