--- a/modules/administration-guide/partials/proc_setting-up-the-microsoft-azure-devops-services-oauth-app.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-the-microsoft-azure-devops-services-oauth-app.adoc
@@ -1,6 +1,6 @@
 :_content-type: PROCEDURE
 :description: Setting up the Microsoft Azure DevOps Services OAuth App
-:keywords: azure, microsoft-azure-devops-services-oauth-app
+:keywords: azure, devops, oauth
 :navtitle: Setting up the Microsoft Azure DevOps Services OAuth App
 // :page-aliases:
 
