--- a/modules/administration-guide/partials/proc_applying-the-microsoft-azure-devops-services-oauth-app-secret.adoc
+++ b/modules/administration-guide/partials/proc_applying-the-microsoft-azure-devops-services-oauth-app-secret.adoc
@@ -29,7 +29,7 @@ kind: Secret
 apiVersion: v1
 metadata:
   name: azure-devops-oauth-config
-  namespace: {prod-namespace} <1>
+  namespace: {prod-namespace}# <1>
   labels:
     app.kubernetes.io/part-of: che.eclipse.org
     app.kubernetes.io/component: oauth-scm-configuration
@@ -37,12 +37,12 @@ metadata:
     che.eclipse.org/oauth-scm-server: azure-devops
 type: Opaque
 data:
-  id: __<Base64_Microsoft_Azure_DevOps_Services_OAuth_App_ID>__ <2>
-  secret: __<Base64_Microsoft_Azure_DevOps_Services_OAuth_Client_Secret>__ <3>
+  id: __<Base64_Microsoft_Azure_DevOps_Services_OAuth_App_ID>__# <2>
+  secret: __<Base64_Microsoft_Azure_DevOps_Services_OAuth_Client_Secret>__# <3>
 ----
 <1> The {prod-short} namespace. The default is `{prod-namespace}`.
-<4> The Base64-encoded Microsoft Azure DevOps Services OAuth *App ID*.
-<5> The Base64-encoded Microsoft Azure DevOps Services OAuth *Client Secret*.
+<2> The Base64-encoded Microsoft Azure DevOps Services OAuth *App ID*.
+<3> The Base64-encoded Microsoft Azure DevOps Services OAuth *Client Secret*.
 
 . Apply the Secret:
 +
