Fix: review and edit #PR 2560 feat: Azure DevOps Service OAuth2 (#2565)
* review of PR 2560

* Update modules/administration-guide/partials/proc_setting-up-the-microsoft-azure-devops-services-oauth-app.adoc

* final edits

--- a/modules/administration-guide/partials/proc_applying-the-microsoft-azure-devops-services-oauth-app-secret.adoc
+++ b/modules/administration-guide/partials/proc_applying-the-microsoft-azure-devops-services-oauth-app-secret.adoc
@@ -14,7 +14,7 @@ Prepare and apply the Microsoft Azure DevOps Services Secret.
 * Setting up the Microsoft Azure DevOps Services OAuth App is completed.
 
 * The Base64-encoded values, which were generated when setting up the Microsoft Azure DevOps Services OAuth App, are prepared:
-** *Application ID*
+** *App ID*
 ** *Client Secret*
 
 * An active `{orch-cli}` session with administrative permissions to the destination {orch-name} cluster. See {orch-cli-link}.
@@ -29,7 +29,7 @@ kind: Secret
 apiVersion: v1
 metadata:
   name: azure-devops-oauth-config
-  namespace: {prod-namespace} <1>
+  namespace: {prod-namespace}# <1>
   labels:
     app.kubernetes.io/part-of: che.eclipse.org
     app.kubernetes.io/component: oauth-scm-configuration
@@ -37,12 +37,12 @@ metadata:
     che.eclipse.org/oauth-scm-server: azure-devops
 type: Opaque
 data:
-  id: __<Base64_Microsoft_Azure_DevOps_Services_OAuth_Application_ID>__ <2>
-  secret: __<Base64_Microsoft_Azure_DevOps_Services_OAuth_Client_Secret>__ <3>
+  id: __<Base64_Microsoft_Azure_DevOps_Services_OAuth_App_ID>__# <2>
+  secret: __<Base64_Microsoft_Azure_DevOps_Services_OAuth_Client_Secret>__# <3>
 ----
 <1> The {prod-short} namespace. The default is `{prod-namespace}`.
-<4> The Base64-encoded *Microsoft Azure DevOps Services OAuth Application ID*.
-<5> The Base64-encoded *Microsoft Azure DevOps Services OAuth Client Secret*.
+<2> The Base64-encoded Microsoft Azure DevOps Services OAuth *App ID*.
+<3> The Base64-encoded Microsoft Azure DevOps Services OAuth *Client Secret*.
 
 . Apply the Secret:
 +
