--- a/modules/administration-guide/partials/proc_setting-up-the-microsoft-azure-devops-services-oauth-app.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-the-microsoft-azure-devops-services-oauth-app.adoc
@@ -1,6 +1,6 @@
 :_content-type: PROCEDURE
 :description: Setting up the Microsoft Azure DevOps Services OAuth App
-:keywords: azure, microsoft-azure-devops-services-oauth-app
+:keywords: azure, devops, oauth
 :navtitle: Setting up the Microsoft Azure DevOps Services OAuth App
 // :page-aliases:
 
@@ -11,22 +11,22 @@ Set up a Microsoft Azure DevOps Services OAuth App using OAuth 2.0.
 
 .Prerequisites
 
-* You are logged in to https://azure.microsoft.com/en-us/products/devops/[Microsoft Azure DevOps Services]
-* Third-party applications can access resources in your organization through OAuth, see details at: link:https://learn.microsoft.com/en-us/azure/devops/organizations/accounts/change-application-access-policies?view=azure-devops[security policies for your organization]
+* You are logged in to https://azure.microsoft.com/en-us/products/devops/[Microsoft Azure DevOps Services].
+* Third-party applications can access resources in your organization through OAuth. See link:https://learn.microsoft.com/en-us/azure/devops/organizations/accounts/change-application-access-policies?view=azure-devops[Manage security & app access policies].
 * link:https://www.gnu.org/software/coreutils/base64[`base64`] is installed in the operating system you are using.
 
 .Procedure
 
-. Go to link:https://app.vsaex.visualstudio.com/app/register[].
+. Visit +https://app.vsaex.visualstudio.com/app/register+.
 
 . Enter the following values:
 
-.. *Company name*: `{prod-short}`.
-.. *Application name*: `{prod-short}`.
+.. *Company name*: `{prod-short}`
+.. *Application name*: `{prod-short}`
 .. *Application website*: `pass:c,a,q[{prod-url}]/`
 .. *Authorization callback URL*: `pass:c,a,q[{prod-url}]/api/oauth/callback`
 
-. *Select Authorized scopes*: `Code (read and write)`.
+. In *Select Authorized scopes*, select *Code (read and write)*.
 
 . Click *Create application*.
 
@@ -37,7 +37,9 @@ Set up a Microsoft Azure DevOps Services OAuth App using OAuth 2.0.
 $ echo -n '__<microsoft_azure_devops_services_oauth_app_id>__' | base64
 ----
 
-. Click *Show* next to Client Secret and Copy the *Client Secret* and encode it to Base64 for use when applying the Microsoft Azure DevOps Services OAuth App Secret:
+. Click *Show* to display the *Client Secret*.
+
+. Copy the *Client Secret* and encode it to Base64 for use when applying the Microsoft Azure DevOps Services OAuth App Secret:
 +
 [subs="+quotes,+attributes,+macros"]
 ----
