--- a/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
+++ b/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
@@ -13,7 +13,11 @@ Mounting your access token as a Secret enables the {prod-short} Server to access
 
 Apply the Secret in your user {orch-namespace} of the {orch-name} cluster of your organization's {prod-short} instance.
 
-After applying the Secret, you can create new workspaces from a private Git repository that is hosted on GitHub, GitLab, Bitbucket, or Microsoft Azure Repos.
+pass:[<!-- vale RedHat.Spelling = NO -->]
+
+After applying the Secret, you can create new workspaces with clones of a private Git repository that is hosted on GitHub, GitLab, Bitbucket, or Microsoft Azure Repos.
+
+pass:[<!-- vale RedHat.Spelling = YES -->]
 
 You can create and apply multiple access-token Secrets per Git provider. You must apply each of those Secrets in your user {orch-namespace}.
 
