--- a/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
+++ b/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
@@ -15,7 +15,7 @@ Apply the Secret in your user {orch-namespace} of the {orch-name} cluster of you
 
 pass:[<!-- vale RedHat.Spelling = NO -->]
 
-After applying the Secret, you can create new workspaces with clones of a private Git repository that is hosted on GitHub, GitLab, Bitbucket, or Microsoft Azure Repos.
+After applying the Secret, you can create workspaces with clones of a private Git repository that is hosted on GitHub, GitLab, Bitbucket, or Microsoft Azure Repos.
 
 pass:[<!-- vale RedHat.Spelling = YES -->]
 
