--- a/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
+++ b/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
@@ -81,10 +81,10 @@ type: Opaque
 ----
 +
 <1> Your {prod-short} user ID.
-<2> The Git provider name: `github` or `gitlab`, `bitbucket-server` or `azure-devops`.
+<2> The Git provider name: `github` or `gitlab` or `bitbucket-server` or `azure-devops`.
 <3> The Git provider URL.
 <4> Your Git provider user ID.
-<5> Your Git provider user organization only for `azure-devops` Git provider.
+<5> Only applicable to `azure-devops`: your Git provider user organization.
 
 . Visit `pass:c,a,q[{prod-url}]/api/kubernetes/namespace` to get your {prod-short} user namespace as `name`.
 
