--- a/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
+++ b/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
@@ -7,7 +7,11 @@
 [id="using-a-git-provider-access-token"]
 = Using a Git-provider access token
 
-OAuth for GitHub, GitLab, or Bitbucket needs to be xref:administration-guide:configuring-oauth-for-git-providers.adoc[configured by the administrator] of your organization's {prod-short} instance. If your administrator could not configure it for {prod-short} users, the workaround is for you to apply your personal access token as a {kubernetes} Secret.
+pass:[<!-- vale RedHat.Spelling = NO -->]
+
+OAuth for GitHub, GitLab, Bitbucket, or Microsoft Azure Repos needs to be xref:administration-guide:configuring-oauth-for-git-providers.adoc[configured by the administrator] of your organization's {prod-short} instance. If your administrator could not configure it for {prod-short} users, the workaround is for you to apply your personal access token as a {kubernetes} Secret.
+
+pass:[<!-- vale RedHat.Spelling = YES -->]
 
 Mounting your access token as a Secret enables the {prod-short} Server to access the remote repository that is cloned during workspace creation, including access to the repository's `/.che` and `/.vscode` folders.
 
