--- a/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
+++ b/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
@@ -88,7 +88,7 @@ type: Opaque
 <2> The Git provider name: `github` or `gitlab` or `bitbucket-server` or `azure-devops`.
 <3> The Git provider URL.
 <4> Your Git provider user ID.
-<5> Only applicable to `azure-devops`: your Git provider user organization.
+<5> This line is only applicable to `azure-devops`: your Git provider user organization.
 
 . Visit `pass:c,a,q[{prod-url}]/api/kubernetes/namespace` to get your {prod-short} user namespace as `name`.
 
