--- a/modules/end-user-guide/pages/troubleshooting-che.adoc
+++ b/modules/end-user-guide/pages/troubleshooting-che.adoc
@@ -15,3 +15,4 @@ This section provides troubleshooting procedures for the most frequent issues a 
 * xref:investigating-failures-at-a-workspace-start-using-the-verbose-mode.adoc[]
 * xref:troubleshooting-slow-workspaces.adoc[]
 * xref:troubleshooting-network-problems.adoc[]
+* xref:troubleshooting-webview-loading-error.adoc[]
