--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -49,3 +49,4 @@
 ** xref:investigating-failures-at-a-workspace-start-using-the-verbose-mode.adoc[]
 ** xref:troubleshooting-slow-workspaces.adoc[]
 ** xref:troubleshooting-network-problems.adoc[]
+** xref:troubleshooting-webview-loading-error.adoc[]
