--- a/modules/end-user-guide/pages/troubleshooting-webview-loading-error.adoc
+++ b/modules/end-user-guide/pages/troubleshooting-webview-loading-error.adoc
@@ -1,25 +1,25 @@
 :_content-type: PROCEDURE
-:description: Troubleshooting webview loading error
+:description: Troubleshooting Webview loading error
 :keywords: user-guide, troubleshooting-webview-loading-error
-:navtitle: Troubleshooting webview loading error
+:navtitle: Troubleshooting Webview loading error
 :page-aliases: .:troubleshooting-webview-loading-error.adoc
 
 [id="troubleshooting-webview-loading-error"]
-= Troubleshooting webview loading error
+= Troubleshooting Webview loading error
 
-If you use Microsoft Visual Studio Code - Open Source in an incognito or private browser window, you can encounter an issue with webviews. The webview is not loaded and an error message appears: *Error loading webview: Error: Could not register service workers*.
+If you use Microsoft Visual Studio Code - Open Source in an incognito or private browser window, you can encounter an issue with Webviews. The Webview is not loaded and an error message appears: *Error loading webview: Error: Could not register service workers*.
 
-The issue affects the following browers:
+The issue affects the following browsers:
 
 * Google Chrome in Incognito mode
 * Mozilla Firefox in Private Browsing mode
 
 [WARNING]
 ====
-Mozilla Firefox Private Browsing mode link:https://bugzilla.mozilla.org/show_bug.cgi?id=1320796[does not support ServiceWorkers] necessary for Microsoft Visual Studio Code - Open Source to load webviews. There is no workaround available.
+Mozilla Firefox Private Browsing mode link:https://bugzilla.mozilla.org/show_bug.cgi?id=1320796[does not support ServiceWorkers] necessary for Microsoft Visual Studio Code - Open Source to load Webviews. There is no workaround available.
 ====
 
-.Fixing webview loading error in Google Chrome Incognito mode
+.Fixing Webview loading error in Google Chrome Incognito mode
 
 Change the cookie settings in Google Chrome to fix the issue.
 
