--- a/modules/end-user-guide/pages/troubleshooting-webview-loading-error.adoc
+++ b/modules/end-user-guide/pages/troubleshooting-webview-loading-error.adoc
@@ -5,6 +5,9 @@
 :page-aliases: .:troubleshooting-webview-loading-error.adoc
 
 [id="troubleshooting-webview-loading-error"]
+
+pass:[<!-- vale RedHat.Spelling = NO -->]
+
 = Troubleshooting Webview loading error
 
 If you use Microsoft Visual Studio Code - Open Source in an incognito or private browser window, you can encounter an issue with Webviews. The Webview is not loaded and an error message appears: *Error loading webview: Error: Could not register service workers*.
@@ -30,7 +33,7 @@ Change the cookie settings in Google Chrome to fix the issue.
 . Click *Cookies and other site data*.
 . Select *Allow all cookies*.
 
-
+pass:[<!-- vale RedHat.Spelling = YES -->]
 
 
 
