fix unrelated Vale errors

--- a/modules/end-user-guide/pages/enabling-maven-artifact-repositories.adoc
+++ b/modules/end-user-guide/pages/enabling-maven-artifact-repositories.adoc
@@ -85,7 +85,7 @@ data:
     </settings>
 ----
 
-. Optional: When using EAP-based devfiles, apply a second `settings-xml` ConfigMap in the `__<username>__-{prod-id-short}` namespace, and with the same content, a different name, and the `/home/jboss/.m2` mount path.
+. Optional: When using JBoss EAP-based devfiles, apply a second `settings-xml` ConfigMap in the `__<username>__-{prod-id-short}` namespace, and with the same content, a different name, and the `/home/jboss/.m2` mount path.
 
 . In the `__<username>__-{prod-id-short}` namespace, apply the ConfigMap for the TrustStore initialization script:
 
