--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -64,11 +64,12 @@
 ** xref:configuring-storage.adoc[]
 *** xref:installing-che-using-storage-classes.adoc[]
 ** xref:managing-identities-and-authorizations.adoc[]
-*** xref:oauth-for-github-gitlab-or-bitbucket.adoc[]
+*** xref:configuring-oauth-for-git-providers.adoc[]
 **** xref:configuring-oauth-2-for-github.adoc[]
 **** xref:configuring-oauth-2-for-gitlab.adoc[]
 **** xref:configuring-oauth-1-for-a-bitbucket-server.adoc[]
 **** xref:configuring-oauth-2-for-the-bitbucket-cloud.adoc[]
+**** xref:configuring-oauth-2-for-microsoft-azure-devops-services.adoc[]
 *** xref:configuring-the-administrative-user.adoc[]
 *** xref:removing-user-data-in-compliance-with-the-gdpr.adoc[]
 * xref:managing-ide-extensions.adoc[]
