--- a/modules/administration-guide/partials/proc_setting-up-the-microsoft-azure-devops-services-oauth-app.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-the-microsoft-azure-devops-services-oauth-app.adoc
@@ -17,7 +17,7 @@ Set up a Microsoft Azure DevOps Services OAuth App using OAuth 2.0.
 
 .Procedure
 
-. Visit link:https://app.vsaex.visualstudio.com/app/register[].
+. Visit link:https://app.vsaex.visualstudio.com/app/register/[].
 
 . Enter the following values:
 
