Add 'Restart Workspace from Local Devfile' command to the corresponding section
Co-authored-by: Max Leonov <mleonov@redhat.com>

--- a/modules/end-user-guide/pages/microsoft-visual-studio-code-open-source-ide.adoc
+++ b/modules/end-user-guide/pages/microsoft-visual-studio-code-open-source-ide.adoc
@@ -21,6 +21,7 @@ You can use *{prod2}* commands by clicking *{prod2}* in the link:https://code.vi
 * *{prod2}: Open Dashboard*
 * *{prod2}: Stop Workspace*
 * *{prod2}: Restart Workspace*
+* *{prod2}: Restart Workspace from Local Devfile*
 * *{prod2}: Open Documentation*
 
 ====
