--- a/RELEASE.adoc
+++ b/RELEASE.adoc
@@ -21,7 +21,7 @@ The publication is decoupled. See link:https://github.com/eclipse-che/che-docs/t
 +
 NOTE: The name of the release branch differs from the number of the release in the trailing `x`.
 
-. Update the following product-version-related values in `antora.yml`:
+. In the `__<major>__.__<minor>__.x` branch, update the following product-version-related values in `antora.yml`:
 +
 [source,yaml,subs="+attributes,+quotes"]
 ----
