feat: extend available schemas for BB repos
Signed-off-by: Valerii Svydenko <vsvydenk@redhat.com>

--- a/modules/end-user-guide/pages/starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc
+++ b/modules/end-user-guide/pages/starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc
@@ -71,7 +71,8 @@ With GitHub and GitLab, you can even use the URL of a specific branch of the rep
 .The URL syntax for starting a new workspace with a clone of a BitBucket Server repository
 ====
 
-`pass:c,a,q[{prod-url}#https://<bb-host>/scm/<project-key>/<repository_name>.git]`
+* `pass:c,a,q[{prod-url}#https://<bb-host>/scm/<project-key>/<repository_name>.git]`
+* `pass:c,a,q[{prod-url}#https://<bb-host>/users/<user-slug>/repos/<repo-name>/]`
 
 ====
 +
