rewrite of the vsx-related procedure due to changes in vsx.org

--- a/modules/end-user-guide/partials/proc_adding-vs-code-extensions.adoc
+++ b/modules/end-user-guide/partials/proc_adding-vs-code-extensions.adoc
@@ -20,17 +20,27 @@ To install recommended extensions in a restricted environment, consider these op
 
 .Procedure
 
+. Get the publisher and extension names of each chosen extension:
+
+.. Find the extension on the link:https://www.open-vsx.org/[Open VSX registry website] and open the extension's listing page.
+
+.. Right-click btn:[DOWNLOAD] and copy its URL. If right-clicking does not allow you to copy the URL, left-click btn:[DOWNLOAD] and right-click any of the version links in the drop-down list and copy its URL.
+
+.. Extract the __<publisher>__ and __<extension>__ names from the copied URL:
++
+`pass:c,m,a,q[https://open-vsx.org/.../file/]__<publisher>__.__<extension>__-__<version>__.vsix`
+
 . Create a `.vscode/extensions.json` file in the remote Git repository.
 
-. Go to the link:https://www.open-vsx.org/[Open VSX registry] and copy the **Unique identifier** of each chosen extension from the extension-listing page to the `extensions.json` file as follows:
+. Add the __<publisher>__ and __<extension>__ names to the `extensions.json` file as follows:
 +
 [source,json,subs="+quotes"]
 ----
   {
     "recommendations": [
-      "__<Unique_identifier_of_extension_A>__",
-      "__<Unique_identifier_of_extension_B>__",
-      "__<Unique_identifier_of_extension_C>__"
+      "__<publisher_A.extension_B>__",
+      "__<publisher_C.extension_D>__",
+      "__<publisher_E.extension_F>__"
     ]
   }
 ----
