--- a/modules/end-user-guide/partials/proc_adding-vs-code-extensions.adoc
+++ b/modules/end-user-guide/partials/proc_adding-vs-code-extensions.adoc
@@ -28,7 +28,7 @@ To install recommended extensions in a restricted environment, consider these op
 
 .. Extract the __<publisher>__ and __<extension>__ names from the copied URL:
 +
-`pass:c,m,a,q[https://open-vsx.org/.../file/]__<publisher>__.__<extension>__-__<version>__.vsix`
+`pass:c,m,a,q[https://open-vsx.org]/.../file/__<publisher>__.__<extension>__-__<version>__.vsix`
 
 . Create a `.vscode/extensions.json` file in the remote Git repository.
 
