--- a/modules/administration-guide/partials/proc_adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance.adoc
@@ -42,7 +42,7 @@ The latest extension version on link:https://open-vsx.org[open-vsx.org] is the d
 [source,json,subs="+quotes"]
 ----
     {
-        "id": "__<published_by>__.__<unique_identifier>__",
+        "id": "__<publisher>__.__<extension>__",
         "download": "__<url_to_download_vsix_file>__",
         "version": "__<extension_version>__"
     }
