Apply suggestions from code review

--- a/modules/end-user-guide/partials/proc_adding-vs-code-extensions.adoc
+++ b/modules/end-user-guide/partials/proc_adding-vs-code-extensions.adoc
@@ -24,7 +24,9 @@ To install recommended extensions in a restricted environment, consider these op
 
 .. Find the extension on the link:https://www.open-vsx.org/[Open VSX registry website] and open the extension's listing page.
 
-.. Right-click btn:[DOWNLOAD] and copy its URL. If right-clicking does not allow you to copy the URL, left-click btn:[DOWNLOAD] and right-click any of the version links in the drop-down list and copy its URL.
+.. Right-click btn:[DOWNLOAD] and copy its URL.
++
+If right-clicking does not allow you to copy the URL, left-click btn:[DOWNLOAD] and right-click any of the version links in the drop-down list and copy its URL.
 
 .. Extract the __<publisher>__ and __<extension>__ names from the copied URL:
 +
