--- a/modules/end-user-guide/partials/proc_setting-up-che-editor-yaml.adoc
+++ b/modules/end-user-guide/partials/proc_setting-up-che-editor-yaml.adoc
@@ -10,5 +10,5 @@ By using the `che-editor.yaml` file, you can set a common default IDE for your t
 .Verification
 
 . xref:starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc[Start a new workspace with a clone of the Git repository].
-. Verify that the expected IDE loads in the browser tab of the started workspace.
+. Verify that the specified IDE loads in the browser tab of the started workspace.
 
