--- a/modules/administration-guide/partials/proc_adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance.adoc
@@ -17,12 +17,12 @@ pass:[<!-- vale RedHat.TermsErrors = YES -->]
 
 include::example$snip_{project-context}-steps-to-add-or-remove-extensions-in-openvsx-sync-json.adoc[]
 
-** If the extension is published on link:https://open-vsx.org[open-vsx.org], you can copy and use the *Unique identifier* from the extension's listing page on link:https://open-vsx.org[open-vsx.org]:
+** If the extension is published on link:https://open-vsx.org[open-vsx.org], you can copy and use the publisher and extension names from the extension's listing page:
 +
 [source,json,subs="+quotes"]
 ----
     {
-        "id": "__<Unique_identifier>__"
+        "id": "__<publisher>__.__<extension>__"
     }
 ----
 +
