--- a/modules/administration-guide/partials/proc_selecting-an-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_selecting-an-open-vsx-registry-instance.adoc
@@ -23,7 +23,7 @@ spec:
 ====
 * The default `openVSXURL` value is `pass:c,a,q[https://open-vsx.org]`.
  
-* To select the embedded Open VSX registry instance in the `plugin-registry` pod, use `openVSXURL: ''`. See the next section for how to customize the included extensions.
+* To select the embedded Open VSX registry instance in the `plugin-registry` pod, use `openVSXURL: ''`. See the next section for how to customize the list of included extensions.
 
 * You can also point `openVSXURL` at the URL of a standalone Open VSX registry instance if its URL is accessible from within your organization's cluster and not blocked by a proxy. 
 ====
