another minor edit

--- a/modules/administration-guide/partials/proc_adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance.adoc
@@ -37,7 +37,7 @@ The latest extension version on link:https://open-vsx.org[open-vsx.org] is the d
 ====
 * If the extension publisher is unavailable or unwilling to publish the extension to link:https://open-vsx.org[open-vsx.org], and if there is no Open VSX equivalent of the extension, consider link:https://github.com/open-vsx/publish-extensions/issues[reporting an issue] to the Open VSX team.
 
-* If you have a closed-source extension or an extension developed only for internal use in your company, you can add the extension directly from a `.vsix` file by using a URL accessible to your custom plugin registry container:
+* If you have a closed-source extension or an extension developed only for internal use in your organization, you can add the extension directly from a `.vsix` file by using a URL accessible to your custom plugin registry container:
 +
 [source,json,subs="+quotes"]
 ----
