another minor edit

--- a/modules/end-user-guide/pages/url-parameter-for-the-ide.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-the-ide.adoc
@@ -7,7 +7,7 @@
 [id="url-parameter-for-the-ide"]
 = URL parameter for the IDE
 
-If the URL for starting a new workspace doesn't contain a parameter specifying the integrated development environment (IDE), the workspace loads with the default IDE, Microsoft Visual Studio Code - Open Source.
+If the URL for starting a new workspace doesn't contain a parameter specifying the integrated development environment (IDE), then the workspace loads with the default IDE, Microsoft Visual Studio Code - Open Source.
 
 The URL parameter for specifying a supported IDE is `che-editor=`. You can use it to start a workspace with a clone of the same project repository and your choice of a supported IDE.
 
