another minor edit

--- a/modules/end-user-guide/pages/defining-a-common-ide.adoc
+++ b/modules/end-user-guide/pages/defining-a-common-ide.adoc
@@ -7,7 +7,7 @@
 [id="defining-a-common-ide"]
 = Defining a common IDE
 
-While the xref:url-parameter-for-the-ide.adoc[URL parameter for the IDE] enables you to start a workspace with your personal choice of the supported IDE, you might find it more convenient to define the same IDE for all workspaces for the same project source code Git repository. To do so, use the `che-editor.yaml` file. This file supports even a detailed IDE configuration.
+While the xref:url-parameter-for-the-ide.adoc[URL parameter for the IDE] enables you to start a workspace with your personal choice of the supported IDE, you might find it more convenient to define the same IDE for all workspaces for the same source code Git repository. To do so, use the `che-editor.yaml` file. This file supports even a detailed IDE configuration.
 
 TIP: If you intend to start most or all of your organization's workspaces with the same IDE other than Microsoft Visual Studio Code - Open Source, an alternative is for the administrator of your organization's {prod-short} instance to specify another supported IDE as the default IDE at the {prod-short} instance level. This can be done with `.spec.devEnvironments.defaultEditor` in the `CheCluster` Custom Resource.
 
